--- a/4.8 Lab/styles.css
+++ b/4.8 Lab/styles.css
@@ -10,6 +10,8 @@ header {
    border-bottom: 2px solid #93B5C6;
    background-color: #DDEDAA;
    padding: 8px;
+   display: flex;
+   justify-content: space-between;
 }
 
 .logo {
@@ -19,10 +21,21 @@ header {
 
 .content {
    margin-left: 30px;
+   display: flex;
+   flex-wrap: wrap;
+}
+
+.main-content{
+   display: flex;
+   flex-wrap: wrap;
+   flex-grow: 1;
+   flex-basis: 70%;
 }
 
 .title {
    border-bottom: 1px dashed #93B5C6;
+   display: flex;
+   align-items: baseline;
 }
 
 .title h1 {
@@ -36,6 +49,10 @@ header {
 
 .summary {
    margin-top: 30px;
+   display: flex;
+   justify-content: space-evenly;
+   flex-grow: 1;
+   flex-basis: 100%;
 }
 
 .summary > div {
@@ -47,10 +64,28 @@ header {
    width: 210px;
 }
 
+.summary div p {
+   display: flex;
+   justify-content: space-between;
+   flex-grow: 1;
+   flex-basis: 20%;
+}
+
 .related-content {
    margin-left: 100px;
+   margin-right: 30px;
 }
 
 .related-content h2 {
    font-size: 18px;
+}
+
+.ingredients{
+   flex-grow: 1;
+   flex-basis: 45%;
+}
+
+.directions{
+   flex-grow: 1;
+   flex-basis: 45%;
 }
