--- a/Assignment 6/styles.css
+++ b/Assignment 6/styles.css
@@ -1,3 +1,68 @@
-.main {
+main {
     font-family: "Roboto", "Helvetica", "sans-serif";
+}
+
+h1 {
+    font-size: 16px;
+    color: #444444;
+}
+
+.container {
+    text-align: center;
+    margin: 5px;
+    font-size: 13px;
+}
+
+.offer {
+    display: inline-block;
+    width: 400px;
+    margin: 4px;
+    text-align: center;
+}
+
+.offer-title{
+    font-size: 14px;
+    font-style: bold;
+    color: #ffffff;
+    background-color: #00b3b3;
+    margin: none;
+    padding: 15px;
+}
+
+.offer-contents{
+    padding: 20px;
+    background-color: #fafafa;
+}
+
+table {
+    width: 100%;
+    background-color: #ffffff;
+    border-spacing: none;
+}
+
+th {
+    font-size: 12px;
+    font-style: bold;
+    color: #777777;
+    padding: 10px;
+    margin: none;
+    text-align: left;
+    border-bottom: 1px solid #f1f1f1;
+}
+
+td{
+    font-weight: lighter;
+    color: #444444;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    margin: none;
+    text-align: left;
+    border-bottom: 1px solid #f1f1f1;
+}
+
+.final-value{
+    font-weight: bold;
+    color: #222ff;
 }
