--- a/Week 7.1/style.css
+++ b/Week 7.1/style.css
@@ -86,7 +86,7 @@ input[type = "submit"]:hover {
     background-color: darkblue;
 }
 
-@media (max-width : 700px,) {
+@media (max-width : 700px) {
     form {
         width: 90%;
         padding: 10px;
