--- a/Assignment 7/styles.css
+++ b/Assignment 7/styles.css
@@ -10,6 +10,8 @@ header {
    border-bottom: 2px solid #93B5C6;
    background-color: #DDEDAA;
    padding: 8px;
+   display: flex;
+   justify-content: space-between;
 }
 
 .logo {
@@ -19,10 +21,14 @@ header {
 
 .content {
    margin-left: 30px;
+   display: flex;
+   flex-wrap: wrap;
 }
 
 .title {
    border-bottom: 1px dashed #93B5C6;
+   flex: baseline;
+   align-items: baseline;
 }
 
 .title h1 {
@@ -36,6 +42,10 @@ header {
 
 .summary {
    margin-top: 30px;
+      display: flex;
+         justify-content: space-evenly;
+         flex-grow: 1;
+         flex-basis: 100%;
 }
 
 .summary > div {
@@ -49,8 +59,32 @@ header {
 
 .related-content {
    margin-left: 100px;
+   flex-grow: 1;
+   flex-basis: 20%;
 }
 
 .related-content h2 {
    font-size: 18px;
+}
+
+.main-content {
+   display: flex;
+   flex-wrap: wrap;
+   flex-grow: 1;
+   flex-basis: 70%;
+}
+
+.summary > div > p {
+   display: flex;
+   justify-content: space-between;
+}
+
+.ingredients {
+   flex-grow: 1;
+   flex-basis: 45%;
+}
+
+.directions {
+   flex-grow: 1;
+   flex-basis: 45%;
 }
